# -AI-Movie-Information-Extractor

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  uiapp.py
