[project]
name = "movie-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-mistralai>=1.1.5",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
